# crypto2krw

./: .gitignore  CLAUDE.md  Makefile
apps/MerchantWeb/: index.html  package-lock.json  package.json
apps/MerchantWeb/src/: App.tsx  index.css
apps/UserApp/: project.yml
apps/UserApp/UserApp/: Info.plist
apps/UserApp/UserApp.xcodeproj/: project.pbxproj
docs/: 01_PRD_Crypto2KRW.md  02_ARCHITECTURE.md  03_DATA_MODELS.md  04_API_CONTRACTS.md  05_TECH_STACK_AND_GUIDELINES.md  06_ADMIN_AND_DB.md  weekly-report.md
infra/: docker-compose.yml
services/chain/: Cargo.toml
services/chain/src/: config.rs  main.rs
services/chain/src/idempotency/: store.rs
services/chain/src/publisher/: kafka.rs  mod.rs
services/chain/src/registry/: kafka_subscriber.rs  mod.rs  redis_store.rs
services/chain/src/watcher/: ethereum.rs  mod.rs  solana.rs  tron.rs
services/channel/auth/: .env.example  package-lock.json  package.json
services/channel/gateway/: .env.example  package-lock.json  package.json  tsconfig.json
services/core/: go.mod  go.sum
services/core/migrations/: 001_create_users.down.sql  001_create_users.up.sql  002_create_merchants.down.sql  002_create_merchants.up.sql  003_create_user_wallets.down.sql  003_create_user_wallets.up.sql  004_create_offchain_ledger.down.sql  004_create_offchain_ledger.up.sql  005_create_transactions.down.sql  005_create_transactions.up.sql  006_create_deposit_events.down.sql  006_create_deposit_events.up.sql  007_create_merchant_settlements.up.sql  (+5 more)
services/oracle/: go.mod  go.sum
services/payment/: .env.example  go.mod  go.sum
(+90 files in other folders)
